--- a/WissenschaftlicherMitarbeiterBAW/Anschreiben.tex
+++ b/WissenschaftlicherMitarbeiterBAW/Anschreiben.tex
@@ -49,31 +49,31 @@ zu Berlin im Fachbereich Teilchen-/Beschleunigerphysik promoviert. In
 meinen Studien handelte es sich um Simulation und Test wichtiger
 Komponenten von Teilchenbeschleunigern und Detektoren.\\
 \indent Nach dem erfolgreichen Abschluss meiner Promotion habe ich in Januar
-2010 als wissenschaflticher Mitarbeiter am Forschungsinstitut DESY in Hamburg
-angefangen zu arbeiten. In DESY Hamburg habe ich in verschiedenen Gruppen
+2010 eine Stelle als wissenschaflticher Mitarbeiter am Forschungsinstitut DESY
+in Hamburg angenommen. In DESY Hamburg habe ich in verschiedenen Gruppen
 gearbeitet, n{\"a}mlich die ATLAS Experiment Gruppe, die Strahlendetektor Gruppe
-Gruppe und die Maschine Strahlkontrolle (MSK) Gruppe wo ich momentan t{\"a}tig bin. \\
-Im ATLAS Experiment habe ich am Projekt ALPHA gearbeitet wo ich die "`Data
-Preparation"' Gruppe geleitet habe, die f{\"u}r die Aufbereitung von gro{\ss}en
-Mengen von Daten zust{\"a}ndig und an der physikalischen Datenanalyse beteiligt
-war.\\
-In the Detector Gruppe habe ich an der Entwicklung eines neuen bildgebenden CMOS
-Detektors gearbeitet. Meine Aufagaben waren die Entwicklung eines
-Softwareframeworks für die Datenverarbeitung und Datenauswertung und die
-Software f{\"u}r das Data Acquisition System.\\
+und die Maschine Strahlkontrolle (MSK) Gruppe wo ich momentan t{\"a}tig bin. \\
+Innerhalb des ATLAS Experiments habe ich am Projekt ALPHA teilgenommen wo
+ich die "`Data Preparation"' Gruppe geleitet habe, die f{\"u}r die Aufbereitung
+von gro{\ss}en Mengen von Daten zust{\"a}ndig und an der physikalischen
+Datenanalyse beteiligt war.\\
+In the Strahlendetektor Gruppe habe ich an der Entwicklung eines
+Softwareframeworks f\"ur die Datenverarbeitung und Datenauswertung und der
+Software f{\"u}r das Data Acquisition System f\"ur ein neuen bildgebenden CMOS
+Detektor gearbeitet.\\
 In der aktuellen Gruppe, die MSK Gruppe, bin ich zust{\"a}ndig f{\"u}r die
-Entwicklung der Software f{\"u}r Slow-Control und Datenerfassung von
-Messger{\"a}ten an Teilchenbeschleunigern und f{\"u}r die Kontrolle von
-Schrittmotoren.\\
-\indent Ich habe in DESY als reiner Physiker angefangen zu arbeiten und im Laufe
-der Jahre sind meine Interessen und Aufgaben an p\\
-Bei DESY engagiere ich mich mit komplexen Problemen in der modernen
+Software f{\"u}r ``'Slow-Control''' und Datenerfassung von Messger{\"a}ten an
+Teilchenbeschleunigern und f{\"u}r die Kontrolle von Schrittmotoren.\\
+\indent Bei DESY engagiere ich mich mit komplexen Problemen in der modernen
 Grundlagenforschung und Entwicklung, wo eine l{\"o}sungsorientierte Denkweise
-erfordert ist. Zusammen mit excellenten Physikkenntnissen, habe ich mich mit
-professionellen Methoden in der Softwareentwicklung besch\"aftigt,
-Alle diese Qu{\"a}lit{\"a}ten entsprechen sehr gut den Anforderungen dieser
-Stellte als wissenschaftlicher Mitarbeiter. \"Uber eine Einladung zu einem pers\"onlichen
-Vorstellungsgespr\"ach w\"urde ich mich sehr freuen.
+und Selbstst\"andigkeit erfordert sind. Meine T{\"a}tigkeiten in DESY haben sich
+im Laufe der Jahre von rein physikalischen Aufgaben zu mehr technischen
+entwickelt. Deswegen kann ich eine excellente Kombination von Physikkenntnissen
+und Erfahrung mit professionellen Methoden in der Softwareentwicklung
+anbieten.\\ 
+\indent Alle diese Qu{\"a}lit{\"a}ten entsprechen sehr gut den Anforderungen
+dieser Stellte als wissenschaftlicher Mitarbeiter. \"Uber eine Einladung zu
+einem pers\"onlichen Vorstellungsgespr\"ach w\"urde ich mich sehr freuen.
 
 % 
 % Nach dem erfolgreichen Abschluss meiner Promotion habe ich eine Stelle
